--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "node-fetch": "^2.7.0",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "valid-shopify-request": "^1.0.1"
   }
 }
